crates/keron-lang/tests/corpus/errors/check/builtin_type_shadow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Resource` is a builtin and cannot be redefined
  --> 1:8
  |
1 | struct Resource {
  |        ^^^^^^^^

error: `Secret` is a builtin and cannot be redefined
  --> 5:6
  |
5 | type Secret = "plain"
  |      ^^^^^^
